services/automation/clusters/feather-core/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
spec:
  parentRefs:
    - name: eg
      namespace: envoy
      sectionName: https
  hostnames:
    - n8n.apps.onelite.feather
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n-main
          port: 5678
